# deepfaker_detection

./: .gitignore  .gitmodules  README.md  Test_main.py  Test_model.py  get_ckpt.sh  main.py  package-lock.json  pyproject.toml  test.db
STT/: main.py  pipeline.py  pyproject.toml  requirements.txt
STT/src/stt/: __init__.py  pipeline.py
Wavelet-CLIP/: pyproject.toml  requirements.txt
Wavelet-CLIP/training/: grad_cam_visualization.py
Wavelet-CLIP/training/dataset/: __init__.py
Wavelet-CLIP/wavelet_lib/: config_type.py  gen_test.py  grad_cam_visualization.py  test.py  train.py  visualize_wavelet_inference.py
Wavelet-CLIP/wavelet_lib/config/detector/: detector.yaml
Wavelet-CLIP/wavelet_lib/dataset/: __init__.py  abstract_dataset.py
Wavelet-CLIP/wavelet_lib/detectors/: __init__.py  base_detector.py  clip_detector.py  clip_detector_wavelet.py  registry.py
Wavelet-CLIP/wavelet_lib/loss/: __init__.py  cross_entropy_loss.py  focal_loss.py  registry.py
Wavelet-CLIP/wavelet_lib/metrics/: registry.py
Wavelet-CLIP/wavelet_lib/trainer/: __init__.py  registry.py  trainer.py
ddp_backend/: cookies.txt  main.py  pyproject.toml  requirements.txt
ddp_backend/core/: config.py  database.py  mailer.py  model.py  redis_bridge.py  s3.py  schedulaer.py  scheduler.py  security.py  tk_broker.py  websocket.py
ddp_backend/detectors/: __init__.py  base_detector.py  interfaces.py  rppg_detector.py  stt_detector.py  unite_detector.py  wavelet_detector.py
ddp_backend/detectors/audio/: __init__.py  stt.py
ddp_backend/detectors/visual/: __init__.py  base.py  inference_result.py  r_ppg.py  r_ppg_preprocessing.py  rppg_preprocessing.py  unite.py  wavelet.py
ddp_backend/detectors/visual/config/: __init__.py  rppg_landmarks.py  rppg_model.py
ddp_backend/detectors/visual/models/: efficientphys_toolbox.py
ddp_backend/models/: __init__.py  alert.py  models.py  report.py  user.py
ddp_backend/routers/: alert.py  auth.py  detection.py  user.py  user_router.py  video.py  websocket.py
ddp_backend/schemas/: __init__.py  alert.py  api.py  config.py  crud.py  enums.py  message.py  ranking.py  report.py  schemas.py  user.py  user_schemas.py
ddp_backend/services/: __init__.py  alert.py  auth.py  auth_service.py  crud.py  dependencies.py  detect_pipeline.py  ranking.py  user.py
ddp_backend/services/crud/: __init__.py  alert.py  base.py  ranking.py  report.py  result.py  source.py  token.py  user.py  video.py
ddp_backend/task/: detection.py  video_processing.py
ddp_backend/utils/: file_handler.py
ddp_frontend/: app.json  package-lock.json  package.json
ddp_frontend/app/: _layout.tsx  analysis-result.tsx  find-id.tsx  find-password.tsx  fraud-report.tsx  history-report.tsx  inquiry.tsx  link-paste.tsx  login.tsx  news.tsx  privacy-policy.tsx  signup.tsx  terms-of-service.tsx
ddp_frontend/app/(tabs)/: _layout.tsx  chatbot.tsx  history.tsx  index.tsx  member-info.tsx  mypage.tsx  report.tsx  settings.tsx
ddp_frontend/app/history/: [id].tsx  _layout.tsx
ddp_frontend/components/ui/: icon-symbol.tsx
ddp_frontend/constants/: theme.ts
ddp_frontend/contexts/: analysis-context.tsx
ddp_frontend/docs/: GOOGLE_LOGIN_SETUP.md
ddp_frontend/lib/: account-api.ts  api.ts  auth-storage.ts  news.ts  pending-upload.ts  with-auth.ts
docs/: API_RESPONSE_SPEC.md
