[project]
name = "deepfaker-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
no-build-isolation-package = ["clip"]
constraint-dependencies = ["setuptools<70"]

[tool.uv.extra-build-dependencies]
"clip" = ["setuptools<70"]

[tool.uv.workspace]
members=[
    "Wavelet-CLIP",
    "ddp_backend",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }
wavelet-clip = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true