[project]
name = "deepfaker-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
build-constraint-dependencies = ["setuptools<82.0.0"]

[tool.uv.workspace]
members=[
    "Wavelet-CLIP",
    "ddp_backend",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }
wavelet-clip = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true