[project]
name = "deepfaker-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
build-constraint-dependencies = ["setuptools<82.0.0"]
no-build-isolation-package = ["flash-attn"]
override-dependencies = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]

[tool.uv.workspace]
members=[
    "Wavelet-CLIP",
    "ddp_backend",
    "unite_detection",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }
wavelet-clip = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
